infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: goalz.dev
    http:
      paths:
      - path: /api/?(.*)
        backend:
          serviceName: gateway-service
          servicePort: 8080
